--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Zhengyi Guo
+first_name: Zhengyi
 middle_name: 
 last_name: Guo
 contact_note: >
